# hpi-cg1

./: .gitignore
a1/: CMakeLists.txt  FrameworkQt  FrameworkQt_automoc.cpp
a1/src/: exercise4a.cpp  exercise4a.h  exercise4b.cpp  exercise4b.cpp~  exercise4b.h  mainwindow.h
a1/src/util/: imageview.h
a2/: CMakeLists.txt  FrameworkQt  FrameworkQt_automoc.cpp
a2/data/: exercise6.frag  exercise6.vert
a2/src/: exercise5.cpp  exercise5.h  exercise6.cpp  exercise6.h  main.cpp  mainwindow.cpp  mainwindow.h  stable.h
a2/src/util/: abstractpainter.cpp  abstractpainter.h  axisalignedboundingbox.h  camera.h  canvas.cpp  canvas.h  fileassociatedasset.h  fileassociatedshader.h  glviewer.cpp  mathmacros.h  navigation.cpp  navigation.h  navigationmath.cpp  painter.cpp  painter.h  paintermode.h  triangle.h
a4/: CMakeLists.txt
a4/data/: cube13.frag  cube13.vert  model.frag  model.vert  sphere.frag  sphere.vert
a4/src/: exercise12.cpp  exercise12.h  exercise13.cpp  exercise13.h  exercise14.cpp  exercise14.h  main.cpp  mainwindow.cpp
a4/src/util/: abstractcoordinateprovider.h  abstractexercise.cpp  abstractpainter.cpp  abstractpainter.h  cachedvalue.h  cachedvalue.hpp  canvas.cpp  fileassociatedshader.cpp  glviewer.cpp  glviewer.h  navigationmath.cpp  navigationmath.h  openglfunctions.h  polygonaldrawable.cpp  polygonaldrawable.h
a5/: CMakeLists.txt
a5/data/: box.frag  box.vert  haloedlines.frag  haloedlines.geom  model.frag  model.geom  model.vert
a5/src/: exercise16.cpp  exercise16.h  exercise17.cpp  exercise17.h  exercise18.cpp  exercise18.h  mainwindow.cpp  mainwindow.h
a5/src/util/: abstractexercise.cpp  abstractexercise.h  abstractpainter.cpp  abstractpainter.h  axisalignedboundingbox.h  cachedvalue.h  camera.cpp  canvas.cpp  canvas.h  fileassociatedasset.h  fileassociatedshader.cpp  glviewer.cpp  glviewer.h  icosahedron.cpp  icosahedron.h  objio.cpp  objio.h  openglfunctions.h  polygonaldrawable.cpp  polygonaldrawable.h  unitcube.h
a6/: CMakeLists.txt  FrameworkQt  FrameworkQt_automoc.cpp
a6/data/: mesh.frag  mesh.vert  polygon.frag  polygon.vert
a6/src/: exercise19.cpp  exercise19.h  exercise20.cpp  exercise20.h  mainwindow.cpp  mainwindow.h
a6/src/util/: abstractexercise.cpp  abstractexercise.h  abstractpainter.cpp  abstractpainter.h  axisalignedboundingbox.cpp  camera.cpp  camera.h  canvas.cpp  canvas.h  fileassociatedasset.cpp  glviewer.cpp  glviewer.h  navigation.cpp  objio.cpp  objio.h  openglfunctions.h  polygonaldrawable.cpp  polygonaldrawable.h
a7/: CMakeLists.txt
a7/data/: phong.frag  phong.vert  toon.frag  toon.vert
a7/src/: exercise21.cpp  exercise21.h  exercise22.cpp  exercise22.h  main.cpp  mainwindow.cpp  mainwindow.h
a7/src/util/: abstractcoordinateprovider.h  abstractexercise.cpp  abstractexercise.h  abstractpainter.cpp  abstractpainter.h  axisalignedboundingbox.cpp  box.cpp  box.h  cachedvalue.hpp  camera.h  canvas.cpp  canvas.h  fileassociatedasset.cpp  fileassociatedshader.h  glviewer.cpp  glviewer.h  halfedgestructure.cpp  halfedgestructure.h  lightingdefinition.h  materialdefinition.h  mathmacros.h  navigation.cpp  navigation.h  navigationmath.cpp  navigationmath.h  openglfunctions.h  paintermode.h  polygonaldrawable.cpp  polygonaldrawable.h  triangle.h  unitcube.cpp  vertexreuse.cpp  vertexreuse.h
src/: exercise123.cpp  exercise123.h  exercise4a.cpp  exercise4b.cpp  exercise4b.h  main.cpp  mainwindow.cpp
src/util/: imageview.cpp
